# czlang

./: .gitignore  Cargo.toml  README.md  build.rs
language-server/: Cargo.toml
language-server/src/: completion.rs  inlay_hint.rs  lib.rs  main.rs  server.rs
lib/: Cargo.toml  build.rs
lib/src/: ast.rs  buildin.rs  format.rs  lib.rs  main.rs  project.rs  query.rs  rust_transpiler.rs  semantics.rs  semantics_types.rs  sum_type.rs  test_utils.rs  topological_sort.rs  tree_sitter.rs  types.rs  validation.rs  vfs.rs
lib/src/ast/: ast.rs  block.rs  common.rs  expression.rs  file.rs  fun.rs  implement.rs  import.rs  interface.rs  loop.rs  mod.rs  struct.rs  type.rs
lib/src/semantics/: block.rs  borrow.rs  expression.rs  file.rs  flow_container.rs  fun.rs  import.rs  mod.rs  package.rs  semantics.rs  statement.rs  struct.rs  topological_sort.rs  types.rs
lib/src/tests/: mod.rs  query.rs  rust_transpiler.rs  validate_borrow.rs  validate_generics.rs  validate_lifetime.rs  validation.rs
lib/tree-sitter-czlang/: Cargo.toml  binding.gyp  grammar.js  package.json
lib/tree-sitter-czlang/src/: grammar.json  node-types.json  parser.c  scanner.c
src/: ast.rs  buildin.rs  infer_types.rs  main.rs  rust_transpiler.rs  test_utils.rs  tree_sitter.rs  types.rs  validation.rs
tree-sitter-czlang/: binding.gyp  grammar.js  package-lock.json
tree-sitter-czlang/src/: grammar.json  node-types.json  parser.c
vscode-extension/: package-lock.json  package.json
vscode-extension/czlang/: CHANGELOG.md  README.md  package.json  vsc-extension-quickstart.md
(+42 files in other folders)
