 [package]
name = "czlang-language-server"
description = "czlang Language Server"
version = "4.3.2"
license = "GPL-3.0"
readme = "README.md"
edition = "2021"


[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
czlang = { path = "../lib" }

anyhow = "1.0.66"
crossbeam-channel = "0.5.6"
log = "0.4.17"
lsp-server = "0.6.0"
lsp-types = { version = "0.93.2", features = ["proposed"] }
serde = "1.0.147"
serde_json = "1.0.88"
threadpool = "1.8.1"
